GNOME Bugzilla – Bug 640803
Queue repaints instead of immediate repainting
Last modified: 2011-01-30 17:05:33 UTC
This way we get double-buffering, coalesce repaints of multiple cells and use all the other niceties of the GTK redraw mechanism. We also don't exercise unused code paths in GTK and avoid bugs like 640195 :)
Created attachment 179495 [details] [review] gnomine: Queue repaints instead of immediate repainting This way we get double-buffering, coalesce repaints of multiple cells and use all the other niceties of the GTK redraw mechanism.
Comment on attachment 179495 [details] [review] gnomine: Queue repaints instead of immediate repainting Committed to master. Thanks