gnomine: Queue repaints instead of immediate repainting

This way we get double-buffering, coalesce repaints of multiple cells
and use all the other niceties of the GTK redraw mechanism.

https://bugzilla.gnome.org/show_bug.cgi?id=640803